Foreign keys gefixt op Studiebelasting na
Related Work Items: #49

--- a/ModuleManager.Web/Views/Module/Details.cshtml
+++ b/ModuleManager.Web/Views/Module/Details.cshtml
@@ -21,7 +21,7 @@
         // Docenten
         try
         {
-            docenten = @Model.Docent.Aggregate("", (current, docent) => current + (docent.Name + ", "));
+            docenten = @Model.Docenten.Aggregate("", (current, docent) => current + (docent.Naam + ", "));
             docenten = docenten.Remove(docenten.Length - 2);
         }
         catch (Exception) {}
