--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -87,27 +87,49 @@
                         </tr>
                     </table>
 
-                    <table style="width:100%;" class="table" id="comp-table" data-niveaus='@Html.Raw(Json.Encode(from n in Model.Options.Niveaus select n.Niveau1))'>
-                        <tr>
-                            <td><label>Competentie</label></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        @for (int i = 0; i < Model.Options.Niveaus.Count; i++)
-                        {
+ 
+    
+                    var moduleCompetenties = Html.Raw(Json.Encode(Model.Module.ModuleCompetentie));
+                    var options = Html.Raw(Json.Encode(Model.Options));    
+                    
+                    <section ng-controller="CompetentieCtrl" ng-init='init(@moduleCompetenties, @options)'>
+                        <h2>Competentie</h2>
+                        <table class="table">
+                            <tr>
+                                <td>niveau</td>
+                                <td>werkvorm</td>
+                                <td></td>
+                            </tr>
+                            <tr ng-repeat="comp in moduleCompetenties">
+                                <td>
+                                    <select name="Module.ModuleCompetentie[{{$index}}].niveau" class="form-control" ng-model="comp.Niveau">
+                                        <option ng-repeat="niveau in niveaus" value="{{niveau.Niveau1}}">{{niveau.Niveau1}}</option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <select name="Module.ModuleCompetentie[{{$index}}].CompetentieCode" class="form-control" ng-model="comp.CompetentieCode">
+                                        <option ng-repeat=" competentie in competenties" value="{{competentie['Value']}}">
+                                            {{competentie["Text"]}}
+                                        </option>
+                                    </select>
+                                </td>
+                                <td>
+                                    <button ng-click="removeCompetentie($index)" class="btn btn-danger btn-sm" type="button">
+                                        <i class="fa fa-trash"></i>
+                                    </button>
+                                </td>
+                            </tr>
                             <tr>
                                 <td></td>
-                                <td><label for="@Model.Options.Niveaus.ElementAt(i).Niveau1-select">@Model.Options.Niveaus.ElementAt(i).Niveau1</label></td>
-                                <td>@Html.DropDownList("ModuleCompetentie", @Model.Options.Competenties, new { 
-                                   
-                                  
-                                   @id = Model.Options.Niveaus.ElementAt(i).Niveau1 + "-select", 
-                                   @multiple = "form-control", 
-                                   @class = "form-control" })</td>
-
-                            </tr>
-                        }
-                    </table>
+                                <td></td>
+                                <td style="width: 90px">
+                                    <button ng-click="addCompetentie()" class="btn btn-success btn-sm" type="button">
+                                        <i class="fa fa-plus"></i>
+                                    </button>
+                                </td>
+                             </tr>
+                        </table>
+                    </section>
 
                     <table class="table">
                         <tr>
@@ -158,7 +180,7 @@
                         <table class="table table-bordered table-center table-striped">
                             <tbody>
                                 <tr>
-                                    <th style="min-width: 250px;"><label for="werkvorm">Werkvorm</label></th>
+                                    <th><label for="werkvorm">Werkvorm</label></th>
                                     <td>
                                         <select name="werkvorm" class="form-control" id="werkvorm" multiple>
                                             @foreach (var werkvorm in Model.Module.ModuleWerkvorm)
@@ -217,13 +239,13 @@
                                                         <td>@Html.EditorFor(item => Model.Module.StudieBelasting[i].Frequentie, new { htmlAttributes = new { @class = "form-control" } })</td>
                                                         <td>
                                                             @Html.EditorFor(item => Model.Module.StudieBelasting[i].SBU, new { htmlAttributes = new { @class = "form-control" } })
-                                                        @Html.HiddenFor(item => Model.Module.StudieBelasting[i].CursusCode, new { htmlAttributes = new { @class = "form-control" } })
-                                                        @Html.HiddenFor(item => Model.Module.StudieBelasting[i].Schooljaar, new { htmlAttributes = new { @class = "form-control" } })
-                                                    </td>
-                                                    <td style="width: 90px; text-align:center">
-                                                        <a class="btn btn-danger btn-sm remove_row"><i class="fa fa-trash"></i></a>
-                                                    </td>
-                                                </tr>
+                                                            @Html.HiddenFor(item => Model.Module.StudieBelasting[i].CursusCode, new { htmlAttributes = new { @class = "form-control" } })
+                                                            @Html.HiddenFor(item => Model.Module.StudieBelasting[i].Schooljaar, new { htmlAttributes = new { @class = "form-control" } })
+                                                        </td>
+                                                        <td style="width: 90px; text-align:center">
+                                                            <a class="btn btn-danger btn-sm remove_row"><i class="fa fa-trash"></i></a>
+                                                        </td>
+                                                    </tr>
                                                 }
                                                 <tr>
                                                     <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
@@ -393,8 +415,8 @@
                     <button type="submit" class="btn btn-success btn-lg">Opslaan</button>
                     <a href="@Url.Action("Overview_Teacher_Temp", "Module")" class="btn btn-default">Annuleren</a>
 
-                }
-            </div>
+                    }
+</div>
 
         </div>
     </div>
