--- a/ModuleManager.Web/Views/Shared/_Layout.cshtml
+++ b/ModuleManager.Web/Views/Shared/_Layout.cshtml
@@ -1,66 +1,64 @@
-﻿<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
+﻿<!DOCTYPE HTML>
+<html ng-app="studiegidsApp">
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-        <title>Informatica Modules - Avans Hogeschool</title>
+    <title>Informatica Modules - Avans Hogeschool</title>
 
-        <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
-        <link href="~/Content/font-awesome.min.css" rel="stylesheet" type="text/css" />
-        <link href="~/Content/select2.css" rel="stylesheet" type="text/css"/>
-        <link href="~/Content/select2-bootstrap.css" rel="stylesheet" type="text/css" />
-        <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic" rel="stylesheet">
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/select2.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/select2-bootstrap.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/custom.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,400italic" rel="stylesheet">
 
-    </head>
-    <body>
-        @{ var headerColor = "DefaultColor"; }
-        @if (User.Identity.IsAuthenticated)
-        {
-            if (User.IsInRole("Admin")) { headerColor = "AdminColor"; }
-            else if (User.IsInRole("Docent")) { headerColor = "DocentColor"; }
-            else { headerColor = "DefaultColor"; }
-        }
-        <header id="header" class="@headerColor">
-            <div class="container">
-                <div id="top" class="row">
-                    <div class="col-md-6">
-                        <a href="@Url.Action("Index", "Home")"><img src="~/Images/avans-white.png" alt="Avans Hogeschool" width="100" height="37"/></a>
-                    </div>
-                    <div class="col-md-6 text-right">
-                        <ul class="user-nav">
-                            <li><a href="#" data-toggle="modal" data-target="#help"> <i class="fa  fa-info-circle"></i> Help</a></li>
-                            @Html.Partial("_LoginPartial")
-                        </ul>
-                    </div>
+</head>
+<body>
+    @{ var headerColor = "DefaultColor"; }
+    @if (User.Identity.IsAuthenticated)
+    {
+        if (User.IsInRole("Admin")) { headerColor = "AdminColor"; }
+        else if (User.IsInRole("Docent")) { headerColor = "DocentColor"; }
+        else { headerColor = "DefaultColor"; }
+    }
+    <header id="header" class="@headerColor">
+        <div class="container">
+            <div id="top" class="row">
+                <div class="col-md-6">
+                    <a href="@Url.Action("Index", "Home")"><img src="~/Images/avans-white.png" alt="Avans Hogeschool" width="100" height="37" /></a>
                 </div>
-                <div id="main" class="row">
-                    <div class="col-sm-12">
-                        <span>Opleiding Informatica</span>
-                    </div>
+                <div class="col-md-6 text-right">
+                    <ul class="user-nav">
+                        <li><a href="#" data-toggle="modal" data-target="#help"> <i class="fa  fa-info-circle"></i> Help</a></li>
+                        @Html.Partial("_LoginPartial")
+                    </ul>
                 </div>
             </div>
-        </header>
-
-        <div id="content" role="content">
-            @RenderBody() <!--Here is where the actual page is loaded-->
+            <div id="main" class="row">
+                <div class="col-sm-12">
+                    <span>Opleiding Informatica</span>
+                </div>
+            </div>
         </div>
+    </header>
 
-        <footer id="footer">
-            <div class="container">
-                <p>"Informatica Modules" is een onderdeel van <a href="http://avans.nl/">Avans University</a>.</p>
-            </div>
-        </footer>
-        
-        <script src="~/Scripts/jquery-2.1.1.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>
-        <script src="~/Scripts/select2.min.js"></script>
-        
-        @RenderSection("Scripts", false)
+    <div id="content" role="content">
+        @RenderBody() <!--Here is where the actual page is loaded-->
+    </div>
 
-    </body>
+    <footer id="footer">
+        <div class="container">
+            <p>"Informatica Modules" is een onderdeel van <a href="http://avans.nl/">Avans University</a>.</p>
+        </div>
+    </footer>
+
+    @Scripts.Render("~/bundles/scripts/main")
+    @RenderSection("Scripts", false)
+
+
+</body>
 </html>
