--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -38,7 +38,7 @@
             </div><br />
             <div class="row">
                 <div class="col-md-6">
-                    @Html.EditorFor(model => model.Toetscode2, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Toetscode 2" } })
+                    @Html.EditorFor(model => model.Toetscode2, new { htmlAttributes = new { @class = "form-control", placeholder = "Toetscode 2" } })
                     @Html.ValidationMessageFor(model => model.Toetscode2, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-6">
