Opmaak aangepast van Module/Details en bij Module/Edit de knop annuleren aangepast
Related Work Items: #108

--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -13,7 +13,7 @@
         <div id="primary">
             <div class="col-md-12">
                 <ol class="breadcrumb">
-                    <li><a href="@Url.Action("Overview_Teacher_Temp", "Module")">Home</a></li>
+                    <li><a href="@Url.Action("Overview", "Module")">Home</a></li>
                     <li class="active">Module bewerken</li>
                 </ol>
             </div>
@@ -415,7 +415,7 @@
 
                     <button name="afterSubmit" value="stay" type="submit" class="btn btn-success btn-lg">Opslaan</button>
                     <button name="afterSubmit" value="close" class="btn btn-success btn-lg">Opslaan & Sluiten</button>
-                    <a href="@Url.Action("Overview_Teacher_Temp", "Module")" class="btn btn-default">Annuleren</a>
+                    <a href="@Url.Action("Overview", "Module")" class="btn btn-default">Annuleren</a>
 
                     }
 </div>
