--- a/ModuleManager.Web/Views/Module/Details.cshtml
+++ b/ModuleManager.Web/Views/Module/Details.cshtml
@@ -243,7 +243,7 @@
                 <table class="table table-bordered">
                     <tbody>
                         <tr>
-                            <th>Week</th>
+                            <th style="width:15%;">Week</th>
                             <th>Onderwerpen</th>
                         </tr>
                         @foreach (WeekplanningViewModel weekplanning in Model.Weekplanning)
