--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -318,7 +318,7 @@
                                                 }
                                                 <tr>
                                                     <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
-                                                        <button data-target="beoordelingen" data-columns="1" data-collectionname="Weekplanning" data-properties='["Beschrijving"]' data-nextindex="@Model.Module.Beoordelingen.Count" class="btn btn-success row_add" type="button"><i class="fa fa-plus"></i></button>
+                                                        <button data-target="beoordelingen" data-columns="1" data-collectionname="Beoordelingen" data-properties='["Beschrijving"]' data-nextindex="@Model.Module.Beoordelingen.Count" class="btn btn-success row_add" type="button"><i class="fa fa-plus"></i></button>
                                                     </td>
                                                 </tr>
                                             </tbody>
