--- a/ModuleManager.Web/Content/custom.css
+++ b/ModuleManager.Web/Content/custom.css
@@ -332,6 +332,6 @@ body.modal-open {
 
 
 /** Module Edit */
-#wp td:first-child{
+#wp td:first-child, #organisatie td:first-child {
     width:80px;
 }
