--- a/ModuleManager.Web/Content/custom.css
+++ b/ModuleManager.Web/Content/custom.css
@@ -335,3 +335,10 @@ body.modal-open {
 #wp td:first-child, #organisatie td:first-child {
     width:80px;
 }
+
+
+/** Validation */
+.field-validation-error{
+    color:red;
+    font-size:12px;
+}
