--- a/ModuleManager.Web/Views/Module/Edit.cshtml
+++ b/ModuleManager.Web/Views/Module/Edit.cshtml
@@ -22,7 +22,14 @@
                 <h2>Module bewerken</h2>
                 <br />
             </div>
-            
+
+            @if (!ViewData.ModelState.IsValid)
+            {   <div class="col-md-12 validation-summary">
+                    <span class="field-validation-error">Niet alle velden zijn correct ingevuld</span>
+                </div>
+            }
+
+
             <div class="col-md-12">
                 @using (Html.BeginForm("Edit", "Module", FormMethod.Post, new { @id = "module_edit_form" }))
                 {
@@ -262,8 +269,8 @@
                                                     </tr>
                                                 }
                                                 <tr>
-                                                    <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
-                                                        <button data-target="sb" data-columns="5" data-collectionname="StudieBelasting" data-properties='["Activiteit", "Duur", "Frequentie", "ContactUren", "SBU"]' data-nextindex="@Model.Module.Leermiddelen.Count" class="btn btn-success btn-sm row_add" type="button"><i class="fa fa-plus"></i></button>
+                                                    <td style="width: 90px; text-align:right; padding-right:30px" colspan="6">
+                                                        <button data-target="sb" data-columns="5" data-collectionname="StudieBelasting" data-properties='["Activiteit", "Duur", "Frequentie", "ContactUren", "SBU"]' data-nextindex="@Model.Module.StudieBelasting.Count" class="btn btn-success btn-sm row_add" type="button"><i class="fa fa-plus"></i></button>
                                                     </td>
                                                 </tr>
                                             </tbody>
