--- a/ModuleManager.Web/Views/Admin/Curriculum.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum.cshtml
@@ -187,8 +187,19 @@
                         {
                             <tr class="tag-item">
                                 <td>@docent.Naam</td>
-                                <td class="actions" style="width:45px;">
-                                    @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Docent", routeValues: new { id = docent.Id }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
+                                <td class="actions ninety-width">
+                                    @Html.NoEncodeActionLink("<span i class='fa fa-pencil'></span>", "Bewerken", "Edit", "Docent", routeValues: new {
+                                 id = docent.Id
+                               }, htmlAttributes: new {
+                                 data_modal = "",
+                                 @class = "btn btn-warning btn-sm"
+                               })
+                                    @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Docent", routeValues: new {
+                                 id = docent.Id
+                               }, htmlAttributes: new {
+                                 data_modal = "",
+                                 @class = "btn btn-danger btn-sm"
+                               })
                                 </td>
                             </tr>
                         }
