--- a/ModuleManager.Web/Views/Admin/Curriculum.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum.cshtml
@@ -132,7 +132,7 @@
                             <tr class="tag-item">
                                 <td>@item.Naam</td>
                                 <td class="actions" style="width:45px;">
-                                    @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Tags", routeValues: new { naam = item.Naam, schooljaar = item.Schooljaar }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
+                                    @Html.NoEncodeActionLink("<span i class='fa fa-trash'></span>", "Verwijderen", "Delete", "Tags", routeValues: new { naam = item.Naam }, htmlAttributes: new { data_modal = "", @class = "btn btn-danger btn-sm" })
                                 </td>
                             </tr>
                         }
