Hernoemen views voor netheid + enable multiSelect fases #180

--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -115,12 +115,11 @@
     @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/modalform")
 
-    <script>
-        $(function() {
-
-            
-
-        });
-    </script>
 
 }
+
+<script>
+    $("#SelectedFases").select2({
+        placeholder: "Fases"
+    });
+</script>
