--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -10,39 +10,60 @@
 {
     <div class="modal-body">
         @Html.AntiForgeryToken()
+
+           <div class="form-group">
+            @Html.LabelFor(model => model.CursusCode)
+            <table class="form-group-prefix">
+                <tr>
+                    <td class="prefix">@Html.EditorFor(model => model.OpleidingsPrefix, new { htmlAttributes = new { @class = "form-control" } })</td>
+                    <td class="dash" >-</td>
+                    <td>@Html.EditorFor(model => model.CursusCode, new { htmlAttributes = new { @class = "form-control" } })</td>
+                    
+                </tr>
+            </table>           
+            @Html.ValidationMessageFor(model => model.CursusCode, "", new { @class = "text-danger" })
+        </div>
         
         <div class="form-group">
             @Html.LabelFor(model => model.Naam)
-            @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.Naam, new { htmlAttributes = new { @class = "form-control" }})
             @Html.ValidationMessageFor(model => model.Naam, "", new { @class = "text-danger" })
         </div>
         
-        <div class="form-group">
-            @Html.LabelFor(model => model.CursusCode)
-            @Html.EditorFor(model => model.CursusCode, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.CursusCode, "", new { @class = "text-danger" })
-        </div>
+     
         
         <div class="form-group">
             <label for="Toetscodes">Toetscodes & Studiepunten</label>
             
             <div class="row">
                 <div class="col-md-6">
-                    @Html.EditorFor(model => model.Toetscode1, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Toetscode 1" } })
+                    <table class="form-group-prefix">
+                        <tr>
+                            <td>@Html.EditorFor(model => model.Toetscode1Prefix, new { htmlAttributes = new { @class = "form-control" } })</td>
+                            <td class="dash">-</td>
+                            <td>@Html.EditorFor(model => model.Toetscode1, new { htmlAttributes = new { @class = "form-control", placeholder = "Toetscode 1" } })</td>
+                        </tr>
+                    </table>    
                     @Html.ValidationMessageFor(model => model.Toetscode1, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-6">
-                    @Html.EditorFor(model => model.Ec1, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Studiepunten 1" } })
+                    @Html.EditorFor(model => model.Ec1, new { htmlAttributes = new { @class = "form-control", type = "number", required = "required", placeholder = "Studiepunten 1" } })
                     @Html.ValidationMessageFor(model => model.Ec1, "", new { @class = "text-danger" })
                 </div>
             </div><br />
             <div class="row">
                 <div class="col-md-6">
-                    @Html.EditorFor(model => model.Toetscode2, new { htmlAttributes = new { @class = "form-control", placeholder = "Toetscode 2" } })
+                    <table class="form-group-prefix">
+                        <tr>
+                            <td>@Html.EditorFor(model => model.Toetscode2Prefix, new { htmlAttributes = new { @class = "form-control" } })</td>
+                            <td class="dash">-</td>
+                            <td>@Html.EditorFor(model => model.Toetscode2, new { htmlAttributes = new { @class = "form-control", placeholder = "Toetscode 2" } })</td>
+                        </tr>
+                    </table>
                     @Html.ValidationMessageFor(model => model.Toetscode2, "", new { @class = "text-danger" })
                 </div>
                 <div class="col-md-6">
-                    @Html.EditorFor(model => model.Ec2, new { htmlAttributes = new { @class = "form-control", required = "required", placeholder = "Studiepunten 2" } })
+                    @Html.EditorFor(model => model.Ec2, new { htmlAttributes = new { @class = "form-control", type = "number", required = "required", placeholder = "Studiepunten 2" } })
                     @Html.ValidationMessageFor(model => model.Ec2, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -121,5 +142,10 @@
 <script>
     $("#SelectedFases").select2({
         placeholder: "Fases"
+    });
+
+    $("#CursusCode").on('input',function () {
+        $("#Toetscode1Prefix").val($("#CursusCode").val());
+        $("#Toetscode2Prefix").val($("#CursusCode").val());
     });
 </script>
