--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -76,53 +76,70 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Fases)
-            <select name="SelectedFases" class="form-control ajax" id="SelectedFases" multiple>
-                @foreach (var faseType in Model.Fases)
+            @Html.Label("Fases")
+
+            <table class="table table-bordered" id="fases">
+                <thead>
+                    <tr>
+                        <th>Fase</th>
+                        <th>Blok</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @for (int i = 0; i < Model.FaseModules.Count(); i++)
+                    {
+                        <tr>
+                            <td>
+                                Kies de fase
+                            </td>
+                            <td>
+                                Kies de fase
+                            </td>
+                            <td style="width: 90px; text-align:center">
+                                <a class="btn btn-danger btn-sm remove_row" id="removeFaseModule"><i class="fa fa-trash"></i></a>
+                            </td>
+                        </tr>
+                    }
+                    <tr>
+                        <td style="width: 90px; text-align:right; padding-right:30px" colspan="5">
+                            <button id="addFaseModule" class="btn btn-success row_add" type="button"><i class="fa fa-plus"></i></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+      
+
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Onderdelen)
+                <select name="Onderdeel" class="form-control ajax" id="Onderdeel">
+                    @foreach (var onderdeel in Model.Onderdelen)
                 {
-                    <option value="@faseType.Naam,@faseType.Schooljaar,@faseType.OpleidingNaam,@faseType.OpleidingSchooljaar">@faseType.Naam</option>
-                }
-            </select>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Blokken)
-            <select name="Blok" class="form-control ajax" id="Blok">
-                @foreach (var blok in Model.Blokken)
-                {
-                    <option>@blok.BlokId</option>
-                }
-            </select>
-        </div>
-        
-        <div class="form-group">
-            @Html.LabelFor(model => model.Onderdelen)
-            <select name="Onderdeel" class="form-control ajax" id="Onderdeel">
-                @foreach (var onderdeel in Model.Onderdelen)
-                {
-                    <option>@onderdeel.Code</option>
-                }
-            </select>
-        </div>
-        
-        <div class="row">
-            <div class="col-md-10">
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Icons)
-                    <select name="Icon" class="form-control ajax" id="Icon">
-                        @foreach (var blok in Model.Icons)
-                        {
-                            <option>@blok.Icon</option>
-                        }
-                    </select>
+                        <option>@onderdeel.Code</option>
+                    }
+                </select>
+            </div>
+
+            <div class="row">
+                <div class="col-md-10">
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.Icons)
+                        <select name="Icon" class="form-control ajax" id="Icon">
+                            @foreach (var blok in Model.Icons)
+                            {
+                                <option>@blok.Icon</option>
+                            }
+                        </select>
+                    </div>
+                </div>
+                <div class="col-md-2">
+                    <i id="iconPlaceholder" class="fa fa-3x"></i>
                 </div>
             </div>
-            <div class="col-md-2">
-                <i id="iconPlaceholder" class="fa fa-3x"></i>
-            </div>
-        </div>
 
-        
+
 
         </div>
     <div class="modal-footer">
@@ -148,4 +165,19 @@
         $("#Toetscode1Prefix").val($("#CursusCode").val());
         $("#Toetscode2Prefix").val($("#CursusCode").val());
     });
+
+    $('#fases').on('click', '.remove_row', function () {
+        $(this).closest("tr").remove();
+    });
+
+    debugger;
+    var nextFaseModuleIndex = @Model.FaseModules.Count();
+    $('#addFaseModule').on('click', function () {
+        var row =  $('<tr>');
+        row.append("<td>Kies Fase</td>");
+        row.append("<td>Kies blok</td>");
+        //Delete button
+        row.append('<td style="width: 90px; text-align:center"><a class="btn btn-danger btn-sm remove_row"><i class="fa fa-trash"></i></a></td>');
+        $('#fases tr:last').before(row);
+    })
 </script>
