change triggeren bij laden module invoer scherm
Related Work Items: #184

--- a/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
+++ b/ModuleManager.Web/Views/Admin/Curriculum/Module/_Add.cshtml
@@ -148,4 +148,6 @@
         $("#Toetscode1Prefix").val($("#CursusCode").val());
         $("#Toetscode2Prefix").val($("#CursusCode").val());
     });
+
+    $("#myModal #Icon").change();
 </script>
