'Contacturen' veranderd in 'uren'
Related Work Items: #189

--- a/ModuleManager.Web/Views/Module/Details.cshtml
+++ b/ModuleManager.Web/Views/Module/Details.cshtml
@@ -208,7 +208,7 @@
                             <th>Activiteit</th>
                             <th>Duur</th>
                             <th>Frequentie</th>
-                            <th>Contacturen</th>
+                            <th>Uren</th>
                             <th>SBU</th>
                         </tr>
                         @{ var studieBelastingTotaal = 0; }
